Fix YUI menus being hidden by bottom bars

--- a/war/src/main/less/base/yui-compatibility.less
+++ b/war/src/main/less/base/yui-compatibility.less
@@ -102,6 +102,8 @@
   }
 
   .yuimenu {
+    z-index: 1000 !important;
+
     .bd {
       border-color: var(--input-border);
       background-color: var(--menu-bg-color);
@@ -220,4 +222,4 @@ div.yahooTree td {
 .yui-panel,
 .yui-panel .bd {
   background-color: var(--background) !important;
-}
+}}
